--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^2.8.1",
+    "react-swipe": "^5.0.8",
     "redux": "^3.6.0",
+    "swipe-js-iso": "^2.0.3",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
