--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "jest": "20.0.3",
+    "koa": "^2.2.0",
+    "koa-router": "^7.1.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "object-assign": "4.1.1",
@@ -93,5 +95,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
