--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^2.8.1",
     "react-swipe": "^5.0.8",
+    "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
     "swipe-js-iso": "^2.0.3",
     "whatwg-fetch": "^2.0.3"
