--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "es6-promise": "^4.1.0",
+    "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.5.4",
@@ -12,6 +13,7 @@
     "react-swipe": "^5.0.8",
     "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
+    "sass-loader": "^6.0.6",
     "swipe-js-iso": "^2.0.3",
     "whatwg-fetch": "^2.0.3"
   },
